--- a/FileHTML/base_converter.html
+++ b/FileHTML/base_converter.html
@@ -10,7 +10,7 @@
             background-color: #f4f4f4;
             display: flex;
             justify-content: center;
-            align-items: center;
+            align-items: flex-start; /* ปรับเป็น flex-start */
             min-height: 100vh;
             margin: 0;
             padding: 20px 0;
@@ -24,17 +24,33 @@
             max-width: 600px;
             text-align: center;
         }
+
+        /* ===== CSS ที่เพิ่มเข้ามาสำหรับปุ่มย้อนกลับ ===== */
+        .back-button {
+            display: inline-block;
+            margin-bottom: 1.5rem;
+            padding: 0.5rem 1rem;
+            background-color: #6c757d;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+            align-self: flex-start;
+        }
+        .back-button:hover {
+            background-color: #5a6268;
+        }
+
         h1 {
             color: #333;
             margin-bottom: 1.5rem;
-            line-height: 1.2; /* ปรับระยะห่างระหว่างบรรทัดของ h1 */
+            line-height: 1.2;
         }
-        /* ===== CSS ที่เพิ่มเข้ามาสำหรับหัวข้อรอง ===== */
         h1 span {
-            display: block; /* ทำให้ขึ้นบรรทัดใหม่ */
-            font-size: 0.6em; /* ขนาดตัวอักษรเล็กลง */
-            color: #6c757d; /* สีเทา */
-            font-weight: normal; /* ทำให้เป็นตัวปกติ ไม่ใช่ตัวหนา */
+            display: block;
+            font-size: 0.6em;
+            color: #6c757d;
+            font-weight: normal;
         }
         .input-group {
             margin-bottom: 1rem;
@@ -96,6 +112,9 @@
 <body>
 
     <div class="converter-container">
+
+        <a href="../index.html" class="back-button">&larr; กลับหน้าหลัก</a>
+
         <h1>
             เครื่องมือแปลงเลขฐาน
             <span>(รองรับทศนิยม)</span>
